--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "dark" # "default" "air", "aqua", "contrast", "dark",
 future                   : true
 # Site Settings
 locale                   : "ko-KR"
-title                    : "개발 저장 블로그2"
+title                    : "개발 저장 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "jeong jiun"
-description              : "공부 & 실무에서 취득한 개발 정보를 보관하는 블로그2"
-url                      : # "https://subcharacters.github.io"
+description              : "공부 & 실무에서 취득한 개발 정보를 보관하는 블로그"
+url                      : "https://subcharacters.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
